--- a/nginx/conf.d/aristotle.conf
+++ b/nginx/conf.d/aristotle.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name localhost aristotle.platyplus.io;
 
   # serve static files
   location /static/ {
