--- a/.env.secret.example
+++ b/.env.secret.example
@@ -1,7 +1,8 @@
 SECRET_KEY=secret123
 
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=secret123
-POSTGRES_DB=mypgsqldb
+DATABASE_URL=postgresql://postgres:@db:5432/postgres
+#POSTGRES_HOST=db
+#POSTGRES_PORT=5432
+#POSTGRES_USER=postgres
+#POSTGRES_PASSWORD=secret123
+#POSTGRES_DB=mypgsqldb
