--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ CairoSVG==2.2.1
 certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
+Click==7.0
 coreapi==2.3.3
 coreschema==0.0.4
 cssselect2==0.2.1
@@ -58,10 +59,10 @@ pdfrw==0.4
 Pillow==5.3.0
 ply==3.11
 promise==2.2.1
-python-dotenv==0.7.1
 psycopg2==2.7.4
 pycparser==2.19
 Pyphen==0.9.5
+python-dotenv==0.7.1
 python-magic==0.4.15
 pytz==2018.5
 PyYAML==3.13
