--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - db
   db:
-    image: "postgres"
+    image: "postgres:10.3-alpine"
     restart: always
     env_file:
       - ./.env.secret
